Fix placeholder contrast

--- a/panel/src/styles/reset.css
+++ b/panel/src/styles/reset.css
@@ -90,6 +90,10 @@
 	cursor: not-allowed;
 }
 
+*::placeholder {
+	opacity: 1;
+}
+
 /* TODO: :where(label:has(> input:disabled), label:has(+ input:disabled)) {
 	cursor: not-allowed;
 } */
